2006-03-12  Brian Warner  <warner@lothar.com>

	* buildbot/test/test_vc.py: remove the last use of waitForDeferred

	* buildbot/test/test_maildir.py (MaildirTest): rename the
	'timeout' method, as it collides with trial's internals

	* buildbot/scripts/runner.py: add 'buildbot restart' command
	(stop): don't sys.exit() out of here, otherwise restart can't work
	* docs/buildbot.texinfo (Shutdown): document it

	* buildbot/buildset.py (BuildSet.__init__): clean up docstring
	* buildbot/status/html.py (Waterfall.__init__): same
	* buildbot/process/builder.py (Builder.startBuild): same
	* buildbot/process/base.py (BuildRequest): same
	* buildbot/sourcestamp.py (SourceStamp): same
	* buildbot/scheduler.py (Nightly): same

	* buildbot/__init__.py (version): bump to 0.7.2+ while between
	releases
	* docs/buildbot.texinfo: same

2006-02-17  Brian Warner  <warner@lothar.com>

	* buildbot/__init__.py (version): Releasing buildbot-0.7.2
	* docs/buildbot.texinfo: set version number to match
	* NEWS: update for 0.7.2

2006-02-16  Brian Warner  <warner@lothar.com>

	* docs/buildbot.texinfo (Build Dependencies): add cindex tag

2006-02-09  Brian Warner  <warner@lothar.com>

	* docs/buildbot.texinfo (How Different VC Systems Specify Sources):
	add text to explain per-build branch parameters
	* NEWS: mention --umask

2006-02-08  Brian Warner  <warner@lothar.com>

	* buildbot/scripts/runner.py (Maker.makeSlaveTAC): remove unused
	method
	(SlaveOptions.optParameters): add --umask, to make it possible to
	make buildslave-generated files (including build products) be
	world-readable
	(slaveTAC): same
	* buildbot/slave/bot.py (BuildSlave.startService): same

2006-01-23  Brian Warner  <warner@lothar.com>

	* buildbot/status/builder.py: urllib.quote() all URLs that include
	Builder names, so that builders can include characters like '/'
	and ' ' without completely breaking the resulting HTML. Thanks to
	Kevin Turner for the patch.
	* buildbot/status/html.py: same